--- a/app/templates/hub.html
+++ b/app/templates/hub.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Quy Trình Công Việc - NO THING{% endblock %}
+{% block title %}Bricon Task{% endblock %}
 
 {% block page_title %}Quy Trình Công Việc{% endblock %}
 
