--- a/app/templates/hub.html
+++ b/app/templates/hub.html
@@ -110,7 +110,7 @@
         <div class="module-content">
             <div class="performance-header">
                 <div class="performance-logo">
-                        <img src="{{ url_for('static', filename='images/logo-bri.png') }}" alt="BRICON Logo">
+                        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="BRICON Logo">
                 </div>
                 <div class="performance-right">
                     <h5 class="performance-title">TO DO BRICON</h5>
