--- a/app/templates/tasks.html
+++ b/app/templates/tasks.html
@@ -305,6 +305,10 @@ td[data-label="Đ.Giá"] i {
 {% endblock %}
 
 {% block content %}
+<!-- ===== TASK HEADER ===== -->
+<div class="task-header-container">
+    {% include 'components/task_header.html' %}
+</div>
 <div class="modal fade" id="filterModal" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
