--- a/app/templates/unrated_tasks.html
+++ b/app/templates/unrated_tasks.html
@@ -82,6 +82,10 @@
 {% endblock %}
 
 {% block content %}
+<!-- ===== TASK HEADER ===== -->
+<div class="task-header-container">
+    {% include 'components/task_header.html' %}
+</div>
 <!-- Statistics Overview -->
 <div class="row mb-4">
     <div class="col-4 mb-3 mb-md-0">
